# sbatchpy

./: README.md  core.py  pyproject.toml
sbatchpy/: __init__.py  core.py
