[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbatchpy"
version = "0.1.0"
description = "A typed Python interface for SLURM sbatch jobs"
authors = [
    { name = "Quan Xu", email = "qxuchn@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
